Fixed width of images when list items are stacked on mobile screen sizes.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -121,3 +121,10 @@ a:hover {
   margin-top: 10%;
 }
 
+@media screen and (max-width: 991px) {
+
+  .img-container{
+    max-width: 100%;
+    height: 100%;
+  }
+}
